--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-scripts": "3.4.1",
-    "react-typing-effect": "^2.0.3"
+    "react-spring": "^8.0.27",
+    "react-typing-effect": "^2.0.3",
+    "react-use-gesture": "^7.0.15"
   },
   "scripts": {
     "start": "react-scripts start",
