added jasmine page in modal

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
     "react-typing-effect": "^2.0.3",
-    "react-use-gesture": "^7.0.15"
+    "react-use-gesture": "^7.0.15",
+    "rodal": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
